--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -43,7 +43,7 @@
         </style>
     </head>
     <body>
-        <p>LED CONTROLER</p>
+        <p>LED CONTROLLER</p>
         <div class="ledcontrol">
             <form method="POST">
                 {%csrf_token%}
